--- a/MusicWithLSTM_Compose.ipynb
+++ b/MusicWithLSTM_Compose.ipynb
@@ -5,9 +5,10 @@
     "colab": {
       "name": "MusicWithLSTM_Compose.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1gaAAt9_dpIza-bTTzxfepp9AY53Piy1C",
-      "authorship_tag": "ABX9TyMAo0Qaj8ckHgr3ewiEH2IS",
+      "authorship_tag": "ABX9TyO+HtIfAZbVaYQYEdJyYedX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +84,7 @@
         "id": "4QY6-B31b9iZ"
       },
       "source": [
-        "section = '/content/drive/MyDrive/ColabNotebooks/data'\n",
+        "section = '/content/drive/MyDrive/ColabNotebooks/MusicGeneration/MusicWithLSTM_Data'\n",
         "music_name = 'classical'\n",
         "\n",
         "run_folder = '{}/'.format(section)\n",
@@ -416,12 +417,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "uazFPXCCdLq5",
-        "outputId": "d2b5b4df-e54b-4aa1-d9a2-5e993677bdb3"
+        "id": "uazFPXCCdLq5"
       },
       "source": [
         "output_folder = os.path.join(run_folder, 'output')\n",
@@ -462,23 +458,7 @@
         "midi_stream.write('midi', fp=os.path.join(output_folder, 'output.mid'))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'/content/drive/MyDrive/ColabNotebooks/data/output/output.mid'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 98
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
